Updated team member pictures for website

--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -37,7 +37,7 @@
             <p class="image-caption">Kass Coxen</p>
           </div>
           <div class="col-md-2 col-sm-4">
-            <img src="images/beck.JPG" class="profile-image" />
+            <img src="images/Rebecca.JPG" class="profile-image" />
             <p class="image-caption">Beck Bohnker</p>
           </div>
           <div class="col-md-2 col-sm-4">
