resized profile images for site loading speed, all are now <100kb. gave profile images alt text tags. added header tag to 'meet our team'

--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -23,29 +23,28 @@
       <img src="images/constructionLogo.png" class="logo" alt="team logo" />
 
       <hr class="my-4" />
-      Meet Our Team
+      <h1>Meet Our Team</h1>
 
       <div class="container-fluid">
         <div class="row padding-top-md justify-content-center">
           <div class="col-md-2 col-sm-4">
-            <img src="images/joe.jpg" class="profile-image" alt="Zach" />
+            <img src="images/joe.jpg" class="profile-image" alt="Joe" />
             <p class="image-caption">Joe Carter</p>
           </div>
           <div class="col-md-2 col-sm-4">
-            <img src="images/kass.JPG" class="profile-image" />
-
+            <img src="images/kass.jpg" class="profile-image" alt="Kass" />
             <p class="image-caption">Kass Coxen</p>
           </div>
           <div class="col-md-2 col-sm-4">
-            <img src="images/Rebecca.JPG" class="profile-image" />
+            <img src="images/beck.jpg" class="profile-image" alt="Beck" />
             <p class="image-caption">Beck Bohnker</p>
           </div>
           <div class="col-md-2 col-sm-4">
-            <img src="images/logan.jpg" class="profile-image" />
+            <img src="images/logan.jpg" class="profile-image" alt="Logan" />
             <p class="image-caption">Logan Garrett</p>
           </div>
           <div class="col-md-2 col-sm-4">
-            <img src="images/zach.jpg" class="profile-image" />
+            <img src="images/zach.jpg" class="profile-image" alt="Zach" />
             <p class="image-caption">Zach Spielberger</p>
           </div>
         </div>
