Created initial team website layout

--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Glacies Indicium</title>
+    <title>Team Schedule - Glacies Indicium</title>
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
@@ -25,7 +25,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
@@ -34,7 +34,7 @@
             <a class="nav-link" href="team.html">Meet the Team</a>
           </li>
 
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
@@ -53,56 +53,40 @@
       </div>
     </nav>
     <div class="jumbotron-fluid text-center">
-      <h1 class="display-4">Glacies Indicium</h1>
-      <img src="images/logo.png" class="logo" alt="team logo" />
-
-      <hr class="my-4" />
+      <h1>Schedule</h1>
     </div>
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <h4>About the Project</h4>
-        <!-- New content goes here-->
-      </div>
+    <div class="container-fluid text-left margin-bottom-md">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Meet the Team</a>
+          </li>
 
-      <p class="alert alert-danger">Place content here</p>
-
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom justify-content-center"
-      >
-        <ul class="navbar-nav row">
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </div>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Documents</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Schedule</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Requirements</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Final Project</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">&copy; 2020</a>
+          </li>
         </ul>
       </nav>
+      '
     </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
