--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Glacies Indicium</title>
+    <title>Team Members - Glacies Indicium</title>
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
@@ -25,12 +25,10 @@
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
           <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item active">
             <a class="nav-link" href="team.html">Meet the Team</a>
           </li>
 
@@ -53,18 +51,64 @@
       </div>
     </nav>
     <div class="jumbotron-fluid text-center">
-      <h1 class="display-4">Glacies Indicium</h1>
-      <img src="images/logo.png" class="logo" alt="team logo" />
-
-      <hr class="my-4" />
+      <h1>Meet The Team</h1>
     </div>
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <h4>About the Project</h4>
-        <!-- New content goes here-->
+    <div class="container-fluid text-center margin-bottom-md">
+      <div class="row padding-top-md justify-content-center">
+        <div class="col-md-2 col-sm-4">
+          <img src="images/joe.jpg" class="profile-image" alt="Zach" />
+          <p class="image-caption font-weight-bold">Joe Carter</p>
+          <p class="image-caption">Team Lead</p>
+        </div>
+        <div class="col-md-2 col-sm-4">
+          <img src="images/kass.JPG" class="profile-image" />
+
+          <p class="image-caption font-weight-bold">Kass Coxen</p>
+          <p class="image-caption">Recorder</p>
+        </div>
+        <div class="col-md-2 col-sm-4">
+          <img src="images/Rebecca.JPG" class="profile-image" />
+          <p class="image-caption font-weight-bold">Beck Bohnker</p>
+          <p class="image-caption">Customer Communicator</p>
+        </div>
+        <div class="col-md-2 col-sm-4">
+          <img src="images/logan.jpg" class="profile-image" />
+          <p class="image-caption font-weight-bold">Logan Garrett</p>
+          <p class="image-caption">Quality Insurance</p>
+        </div>
+        <div class="col-md-2 col-sm-4">
+          <img src="images/zach.jpg" class="profile-image" />
+          <p class="image-caption font-weight-bold">Zach Spielberger</p>
+          <p class="image-caption">Architect</p>
+        </div>
       </div>
 
-      <p class="alert alert-danger">Place content here</p>
+      <hr class="my-4" />
+      <h5>Team Clients & Mentor</h5>
+      <div class="row padding-top-md justify-content-center">
+        <div class="col-4 col-sm-4">
+          <img src="images/joe.jpg" class="profile-image" alt="Zach" />
+          <p class="image-caption font-weight-bold">Andrew Abraham</p>
+          <p class="image-caption">Team Mentor</p>
+        </div>
+        <div class="col-4 col-sm-4">
+          <img src="images/kass.JPG" class="profile-image" />
+
+          <p class="image-caption font-weight-bold">Dr. Mark Salvator</p>
+          <p class="image-caption">
+            Assistant Professor Department of Planetary Science <br />
+            Northern Arizona University
+          </p>
+        </div>
+        <div class="col-4 col-sm-4">
+          <img src="images/Rebecca.JPG" class="profile-image" />
+          <p class="image-caption font-weight-bold">Dr. Heather Lynch</p>
+          <p class="image-caption">
+            Professor Department of Ecology and Evolution <br />
+            Stony Brook University
+          </p>
+        </div>
+      </div>
 
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom justify-content-center"
@@ -103,6 +147,7 @@
         </ul>
       </nav>
     </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
