Updated team page to include links to personal profiles, fixed footer links, and added pdfs within documents tab

--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -79,16 +79,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="demos.html">Demos</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item disabled">
             <a class="nav-link">&copy; 2020</a>
           </li>
         </ul>
       </nav>
-      '
     </div>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
