--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -57,14 +57,23 @@
     </div>
     <div class="container-fluid text-left margin-bottom-md">
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action">
+        <a
+          href="documents/TeamStandards.pdf"
+          class="list-group-item list-group-item-action"
+        >
           Team Standards
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a
+          href="documents/TeamInventory.pdf"
+          class="list-group-item list-group-item-action"
+        >
           Team Inventory
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action">
+        <a
+          href="documents/MiniIntro.pdf"
+          class="list-group-item list-group-item-action"
+        >
           Mini Intro Presentation
         </a>
 
@@ -92,27 +101,25 @@
           </li>
 
           <li class="nav-item active">
-            <a class="nav-link" href="team.html">Documents</a>
+            <a class="nav-link" href="documents.html">Documents</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="team.html">Schedule</a>
+            <a class="nav-link" href="schedule.html">Schedule</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="team.html">Requirements</a>
+            <a class="nav-link" href="requirements.html">Requirements</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="team.html">Final Project</a>
+            <a class="nav-link" href="demos.html">Demos</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="team.html">&copy; 2020</a>
+          <li class="nav-item disabled">
+            <a class="nav-link">&copy; 2020</a>
           </li>
         </ul>
       </nav>
-      '
     </div>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
