--- a/TeamWebsite/index.html
+++ b/TeamWebsite/index.html
@@ -66,45 +66,36 @@
 
       <p class="alert alert-danger">Place content here</p>
 
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom justify-content-center"
-      >
-        <ul class="navbar-nav row">
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Meet the Team</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="documents.html">Documents</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="schedule.html">Schedule</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="requirements.html">Requirements</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="demos.html">Demos</a>
+          </li>
+          <li class="nav-item disabled">
+            <a class="nav-link">&copy; 2020</a>
+          </li>
         </ul>
       </nav>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
