--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <!--Link to icon library-->
+    <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -56,52 +59,148 @@
     <div class="container-fluid text-center margin-bottom-md">
       <div class="row padding-top-md justify-content-center">
         <div class="col-md-2 col-sm-4">
-          <img src="images/joe.jpg" class="profile-image" alt="Zach" />
+          <img
+            src="images/joe.jpg"
+            class="profile-image"
+            alt="Joe Profile Image"
+          />
           <p class="image-caption font-weight-bold">Joe Carter</p>
           <p class="image-caption">Team Lead</p>
+          <p class="image-caption">
+            <a href="https://www.linkedin.com/in/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </p>
         </div>
-        <div class="col-md-2 col-sm-4">
-          <img src="images/kass.JPG" class="profile-image" />
 
-          <p class="image-caption font-weight-bold">Kass Coxen</p>
-          <p class="image-caption">Recorder</p>
-        </div>
         <div class="col-md-2 col-sm-4">
-          <img src="images/Rebecca.JPG" class="profile-image" />
+          <img
+            src="images/kass.JPG"
+            class="profile-image"
+            alt="Kass Coxen profile image"
+          />
+          <p class="image-caption font-weight-bold">
+            Kass Coxen
+          </p>
+          <p class="image-caption">Recorder</p>
+          <p class="image-caption">
+            <a href="https://www.linkedin.com/in/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </p>
+        </div>
+
+        <div class="col-md-2 col-sm-4">
+          <img
+            src="images/Rebecca.JPG"
+            class="profile-image"
+            alt="Beck Bohnker profile image"
+          />
           <p class="image-caption font-weight-bold">Beck Bohnker</p>
           <p class="image-caption">Customer Communicator</p>
+          <p class="image-caption">
+            <a href="https://www.linkedin.com/in/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </p>
         </div>
+
         <div class="col-md-2 col-sm-4">
-          <img src="images/logan.jpg" class="profile-image" />
+          <img
+            src="images/logan.jpg"
+            class="profile-image"
+            alt="Logan Garrett profile image"
+          />
           <p class="image-caption font-weight-bold">Logan Garrett</p>
           <p class="image-caption">Quality Insurance</p>
+          <p class="image-caption">
+            <a href="https://www.linkedin.com/in/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/mlgarrett" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </p>
         </div>
+
         <div class="col-md-2 col-sm-4">
-          <img src="images/zach.jpg" class="profile-image" />
+          <img
+            src="images/zach.jpg"
+            class="profile-image"
+            alt="Zach Spielberger profile image"
+          />
           <p class="image-caption font-weight-bold">Zach Spielberger</p>
           <p class="image-caption">Architect</p>
+          <p class="image-caption">
+            <a
+              href="https://www.linkedin.com/in/zachary-spielberger/"
+              target="_blank"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/zachspiel" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:zacharyspielberger@nau.edu"
+              ><i class="fas fa-envelope"></i
+            ></a>
+          </p>
         </div>
       </div>
 
       <hr class="my-4" />
       <h5>Team Clients & Mentor</h5>
+
       <div class="row padding-top-md justify-content-center">
         <div class="col-4 col-sm-4">
-          <img src="images/joe.jpg" class="profile-image" alt="Zach" />
+          <img
+            src="images/joe.jpg"
+            class="profile-image"
+            alt="Andrew Abraham Profile Image"
+          />
           <p class="image-caption font-weight-bold">Andrew Abraham</p>
           <p class="image-caption">Team Mentor</p>
         </div>
-        <div class="col-4 col-sm-4">
-          <img src="images/kass.JPG" class="profile-image" />
 
+        <div class="col-4 col-sm-4">
+          <img
+            src="images/kass.JPG"
+            class="profile-image"
+            alt="Dr. Mark Salvator profile image"
+          />
           <p class="image-caption font-weight-bold">Dr. Mark Salvator</p>
           <p class="image-caption">
             Assistant Professor Department of Planetary Science <br />
             Northern Arizona University
           </p>
         </div>
+
         <div class="col-4 col-sm-4">
-          <img src="images/Rebecca.JPG" class="profile-image" />
+          <img
+            src="images/Rebecca.JPG"
+            class="profile-image"
+            alt="Dr. Heather Lynch profile image"
+          />
           <p class="image-caption font-weight-bold">Dr. Heather Lynch</p>
           <p class="image-caption">
             Professor Department of Ecology and Evolution <br />
@@ -110,46 +209,37 @@
         </div>
       </div>
 
-      <nav
-        class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom justify-content-center"
-      >
-        <ul class="navbar-nav row">
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="team.html">Meet the Team</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="documents.html">Documents</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="schedule.html">Schedule</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="requirements.html">Requirements</a>
-            </li>
-          </div>
-          <div class="col-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="demos.html">Demos</a>
-            </li>
-          </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="team.html">Meet the Team</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="documents.html">Documents</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="schedule.html">Schedule</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="requirements.html">Requirements</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="demos.html">Demos</a>
+          </li>
+          <li class="nav-item disabled">
+            <a class="nav-link">&copy; 2020</a>
+          </li>
         </ul>
       </nav>
     </div>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
