--- a/TeamWebsite/team.html
+++ b/TeamWebsite/team.html
@@ -130,7 +130,7 @@
             alt="Logan Garrett profile image"
           />
           <p class="image-caption font-weight-bold">Logan Garrett</p>
-          <p class="image-caption">Quality Insurance</p>
+          <p class="image-caption">Quality Assurance</p>
           <p class="image-caption">
             <a href="https://www.linkedin.com/in/" target="_blank">
               <i class="fab fa-linkedin"></i>
