Updated bottom footer to be responsive on mobile devices

--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -55,34 +55,42 @@
     <div class="jumbotron-fluid text-center">
       <h1>Schedule</h1>
     </div>
-    <div class="container-fluid text-left margin-bottom-md">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="team.html">Meet the Team</a>
-          </li>
-
-          <li class="nav-item active">
-            <a class="nav-link" href="documents.html">Documents</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="schedule.html">Schedule</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="requirements.html">Requirements</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="demos.html">Demos</a>
-          </li>
-          <li class="nav-item disabled">
-            <a class="nav-link">&copy; <span id="year"></span></a>
-          </li>
-        </ul>
+    <div class="container-fluid text-center margin-bottom-md">
+      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Glacies Indicium</a>
+        <button
+          class="navbar-toggler collapsed"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarFooterCollapse"
+          aria-controls="navbarFooterCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="navbarFooterCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="team.html">Meet the Team</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="documents.html">Documents</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="schedule.html">Schedule</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="requirements.html">Requirements</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="demos.html">Demos</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
     <script src="js/script.js"></script>
